20220614: add deployment update message struct naming
