# model/common/request/deployment_model.go
@@ -1,6 +1,6 @@
 package request
 
-type UpdateMessage struct {
+type DeployUpdateMessage struct {
 	Namespace      string `json:"namespace"`
 	Name           string `json:"name"`
 	ReplicasNumber int32  `json:"replicasNumber"`
